stl-test/Tests/coordinate/index/Negative/test6.cpp
//#error
#include <coordinate>
int main(void)
{
    std::offset<2> cord{5566, 5566};
    --cord;
}
